se-learning-hub-docker-study/web-shell.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-shell
  labels:
    app: web-shell
spec:
  containers:
    - name: ttyd
      image: kix.ocir.io/orasejapan/se-learning-hub/web-shell:latest
      ports:
        - containerPort: 8080
