se-learning-hub-docker-study/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: kix.ocir.io/orasejapan/se-learning-hub/web:latest
          ports:
            - containerPort: 80
