se-learning-hub-docker-study/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-shell-service
  labels:
    app: web-shell
  annotations:
    oci.oraclecloud.com/load-balancer-type: "lb"
    service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "30"
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 7681
      nodePort: 30080
  selector:
    app: web-shell
