se-learning-hub-docker-study/web-shell-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-shell-service
spec:
  type: ClusterIP
  selector:
    app: flask-app
  ports:
    - port: 80
      targetPort: 80
